[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broker-simulator"
version = "0.1.0"
description = "Broker simulator"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "alpaca-py~=0.43.2",
]

[project.scripts]
broker-simulator = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["simulator"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["simulator"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
